force-app/main/default/objects/Case/fields/ErrorReproduction__c.field-meta.xml
<CustomField>
    <fullName>ErrorReproduction__c</fullName>
    <inlineHelpText>Describe how to reproduce the error.</inlineHelpText>
    <label>Error Reproduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>