force-app/main/default/objects/Case/fields/FlagPriority__c.field-meta.xml
<CustomField>
    <fullName>FlagPriority__c</fullName>
    <formula>Case(Priority,
&quot;1. High&quot;,IMAGE(&quot;/resource/1504676861000/Case_Flag_Red&quot;,&quot;Red&quot;),
&quot;2. Medium&quot;,IMAGE(&quot;/resource/1504676913000/Case_Flag_Orange&quot;,&quot;Yellow&quot;),
&quot;3. Low&quot;,IMAGE (&quot;/resource/1504676950000/Case_Flag_Yellow&quot;,&quot;Green&quot;),
&quot;4. 2 Min Task&quot;,IMAGE (&quot;/resource/1504676988000/Case_Flag_2&quot;,&quot;2Min&quot;),
&quot;Red&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag: Priority</label>
    <type>Text</type>
</CustomField>