force-app/main/default/objects/Case/fields/InfoAllDate__c.field-meta.xml
<CustomField>
    <fullName>InfoAllDate__c</fullName>
    <label>Info All Date</label>
    <type>Date</type>
</CustomField>