force-app/main/default/objects/Case/fields/InternalComments__c.field-meta.xml
<CustomField>
    <fullName>InternalComments__c</fullName>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>