force-app/main/default/objects/Case/fields/InventoryConcerned__c.field-meta.xml
<CustomField>
    <fullName>InventoryConcerned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Concerned</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>IT Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>