force-app/main/default/objects/Case/fields/ITInternal__c.field-meta.xml
<CustomField>
    <fullName>ITInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IT internal issues, not from users</description>
    <label>IT internal</label>
    <type>Checkbox</type>
</CustomField>