force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kunden betroffen</fullName>
            </value>
            <value>
                <fullName>Alle Benutzer betroffen</fullName>
            </value>
            <value>
                <fullName>Viele Benutzer betroffen</fullName>
            </value>
            <value>
                <fullName>Einzelner Benutzer betroffen</fullName>
            </value>
            <value>
                <fullName>Schönheitsfehler</fullName>
            </value>
            <value>
                <fullName>IT Maintenance</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>