force-app/main/default/objects/Case/fields/StatusInfo__c.field-meta.xml
<CustomField>
    <fullName>StatusInfo__c</fullName>
    <defaultValue>&quot;Forwarded 2nd Level = Polygraphen&quot; &amp; BR() &amp; &quot;Forwarded 3rd Level = Projektleiter &amp; Systemverantwortliche&quot; &amp; BR() &amp; &quot;Forwarded 4th Level = Systemanbieter&quot;</defaultValue>
    <label>Status Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>