force-app/main/default/objects/Case/fields/ThirdPartyServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Partner__c</field>
            <operation>contains</operation>
            <value>BLC</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>IT_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>