force-app/main/default/objects/Case/fields/ThirdPartyTicketNr__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyTicketNr__c</fullName>
    <label>Third Party Ticket Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>