force-app/main/default/objects/Case/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workaround nicht verfügbar</fullName>
            </value>
            <value>
                <fullName>Workaround nur mit viel Aufwand verfügbar</fullName>
            </value>
            <value>
                <fullName>Workaround verfügbar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>