force-app/main/default/objects/Case/fields/WorkTime__c.field-meta.xml
<CustomField>
    <fullName>WorkTime__c</fullName>
    <label>Work Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>