force-app/main/default/objects/Case/recordTypes/ITCases.recordType-meta.xml
<RecordType>
    <fullName>ITCases</fullName>
    <active>true</active>
    <businessProcess>IT Case</businessProcess>
    <label>IT Cases</label>
</RecordType>