force-app/main/default/objects/Case/recordTypes/SBBCase.recordType-meta.xml
<RecordType>
    <fullName>SBBCase</fullName>
    <active>true</active>
    <businessProcess>SBB Case</businessProcess>
    <label>SBB Case</label>
    
    
</RecordType>