force-app/main/default/objects/Case/validationRules/CAS002_Type_must_be_added_for_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>CAS002_Type_must_be_added_for_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 $User.PS480FunctionValidationRulesActive__c =true,

RecordType.DeveloperName = &quot;ITCases&quot;,
ISPICKVAL( Status,&quot;Closed&quot;),
OR(
LEN(TEXT(Type))=0 ,
LEN(Solution__c)=0
)
)</errorConditionFormula>
    <errorMessage>Please choose the case type and/or add the solution to the case.
(CAS002)</errorMessage>
</ValidationRule>