force-app/main/default/objects/Case/listViews/All_new_IT_Cases.listView-meta.xml
<ListView>
    <fullName>All_new_IT_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <filters>
        <field>ITInternal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>bitdefender@brandleadership.ch</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>notEqual</operation>
        <value>Employee Exit</value>
    </filters>
    <label>All new IT Cases</label>
    <language>en_US</language>
</ListView>