force-app/main/default/objects/Case/listViews/Finance_My_Cases.listView-meta.xml
<ListView>
    <fullName>Finance_My_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>FlagPriority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>DeadlineDate__c</columns>
    <columns>OnHoldUntil__c</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Detected Malware Notficiation</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Antiphishing Activity Noficiation</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <label>8130 - Finance Cases - My Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_FIN_Alle</group>
    </sharedTo>
</ListView>