force-app/main/default/objects/Case/listViews/IT_Cases_My_Cases.listView-meta.xml
<ListView>
    <fullName>IT_Cases_My_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>FlagPriority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>DeadlineDate__c</columns>
    <columns>OnHoldUntil__c</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Detected Malware Notification</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Antiphishing Activity Notification</value>
    </filters>
    <label>7030 - IT Cases - My Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>