force-app/main/default/objects/Case/listViews/JIRA_Case.listView-meta.xml
<ListView>
    <fullName>JIRA_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>JIRA Queue</label>
    <queue>JIRAQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>