force-app/main/default/objects/Case/listViews/Last_Pass_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Last_Pass_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Last Pass Queue</label>
    <queue>LastPassQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>