force-app/main/default/objects/Case/listViews/Parx_and_BLC_3rd_Level_Tickets.listView-meta.xml
<ListView>
    <fullName>Parx_and_BLC_3rd_Level_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Forwarded 3rd Level</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Skywalk Queue</value>
    </filters>
    <label>Parx and BLC 3rd Level Tickets</label>
    <language>en_US</language>
    <sharedTo>
        <group>Parx_and_BLC_3rd_Level_Tickets</group>
    </sharedTo>
</ListView>