force-app/main/default/objects/Case/listViews/SBBCases_Case.listView-meta.xml
<ListView>
    <fullName>SBBCases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SBB Cases Queue</label>
    <queue>SBBCasesQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>