force-app/main/default/objects/Case/listViews/X7000_IT_Cases_All_New_IT_Cases.listView-meta.xml
<ListView>
    <fullName>X7000_IT_Cases_All_New_IT_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>FlagPriority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>DeadlineDate__c</columns>
    <columns>OnHoldUntil__c</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <filters>
        <field>ITInternal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>notEqual</operation>
        <value>Employee Exit</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>IT</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>bitdefender@brandleadership.ch,servicedesk@wide.ch</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>responded to the BLC Night Invitation</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>7000 - IT Cases - All New IT Cases</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>