force-app/main/default/objects/Case/listViews/X7005_IT_Cases_All_Open_Employee_Exit.listView-meta.xml
<ListView>
    <fullName>X7005_IT_Cases_All_Open_Employee_Exit</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>FlagPriority__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>DeadlineDate__c</columns>
    <columns>OnHoldUntil__c</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <filters>
        <field>ITInternal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Employee Exit</value>
    </filters>
    <label>7005 - IT Cases - All Open Exit</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>