force-app/main/default/objects/Case/listViews/X7010_IT_Cases_All_Open_2nd_Level.listView-meta.xml
<ListView>
    <fullName>X7010_IT_Cases_All_Open_2nd_Level</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>FlagPriority__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ThirdPartyServiceProvider__c</columns>
    <columns>ThirdPartyTicketNr__c</columns>
    <columns>NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ThirdPartyServiceProvider__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ITCases</value>
    </filters>
    <label>7000 - IT Cases - All Open 2nd Level</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_IT_Alle</group>
    </sharedTo>
</ListView>